@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-311
+CSN=CSN-awb-312
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
